# bazel-wasm-demo

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
.bcr/: metadata.template.json
.gemini/skills/tmux-gemini-delegate/: SKILL.md
.gemini/skills/tmux-gemini-delegate/scripts/: delegate.sh
.github/workflows/: publish-bcr.yml  publish.yml  tag-and-release.yml  test.yml
ai/: spec.md
protos/api/: BUILD.bazel  api.client.go  api.pb.client.go  api.pb.go  api.pb.server.go  api.proto  api.server.go  api_grpc.pb.go
server/: BUILD.bazel  flag.bzl  main.go  server_test.go
static/: BUILD.bazel
tools/: BUILD.bazel
tools/protoc-gen-client/: BUILD.bazel  main.go
tools/protoc-gen-server/: BUILD.bazel  main.go
ui/: BUILD.bazel  ui.go
wasm/: BUILD.bazel  main.go
