module(
    name = "bazel-wasm-demo",
    version = "0.2.2",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")

bazel_dep(name = "buildozer", version = "8.5.1", dev_dependency = True)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_android", version = "0.7.2")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_go", version = "0.60.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_glog",
    "com_github_maxence_charriere_go_app_v10",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "com_github_bootstrap",
    downloaded_file_path = "bootstrap.css",
    sha256 = "038ecec312ff9c0374c9d8831534865fb7ed6df4c94ca822274cea0ae4cf0e1e",
    urls = ["https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.css"],
)

bazel_dep(name = "rules_oci", version = "2.3.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:9dce90e688a57e59ce473ff7bc4c80bc8fe52d2303b4d99b44f297310bbd2210",
    image = "gcr.io/distroless/base-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/ppc64le",
        "linux/s390x",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8", "distroless_base_linux_arm_v7", "distroless_base_linux_ppc64le", "distroless_base_linux_s390x")
