load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/bazel-wasm-demo/server",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/api",
        "//ui",
        "@com_github_maxence_charriere_go_app_v10//pkg/app",
    ],
)

go_binary(
    name = "server",
    args = [
        "--wasm-path",
        "$(location //wasm)",
        "--icon-path",
        "--favicon-path",
        "$(location //static:favicon)",
        "$(location //static:icon)",
    ],
    data = [
        "//static:icon",
        "//static:favicon",
        "//wasm",
    ],
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    data = [
        ":server",
        "//static:icon",
        "//static:favicon",
        "//wasm",
    ],
    env = {
        "SERVER_BIN": "$(location :server)",
        "WASM_LOC": "$(location //wasm)",
        "ICON_LOC": "$(location //static:icon)",
        "FAVICON_LOC": "$(location //static:favicon)",
    },
    deps = ["@rules_go//go/tools/bazel"],
)
