load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

genrule(
    name = "copy_web_assets",
    srcs = [
        "//wasm",
        "//static:icon",
        "//static:favicon",
        "//static:bootstrap_css",
    ],
    outs = [
        "web/app.wasm",
        "web/icon.png",
        "web/favicon.ico",
        "web/bootstrap.min.css",
    ],
    cmd = """
    cp $(location //wasm) $(location web/app.wasm)
    cp $(location //static:icon) $(location web/icon.png)
    cp $(location //static:favicon) $(location web/favicon.ico)
    cp $(location //static:bootstrap_css) $(location web/bootstrap.min.css)
    """,
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "web/app.wasm",
        "web/icon.png",
        "web/favicon.ico",
        "web/bootstrap.min.css",
    ],
    importpath = "github.com/filmil/bazel-wasm-demo/server",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/api",
        "//ui",
        "@com_github_golang_glog//:glog",
        "@com_github_maxence_charriere_go_app_v10//pkg/app",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    data = [":server"],
    env = {
        "SERVER_BIN": "$(location :server)",
    },
    deps = ["@rules_go//go/tools/bazel"],
)
