load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load(":flag.bzl", "flag_to_file")

flag_to_file(
    name = "registry",
    build_setting_default = "docker.io/filipfilmar/wasm-demo",
)

genrule(
    name = "copy_web_assets",
    srcs = [
        "//wasm",
        "//static:icon",
        "//static:favicon",
        "//static:bootstrap_css",
    ],
    outs = [
        "web/app.wasm",
        "web/icon.png",
        "web/favicon.ico",
        "web/bootstrap.min.css",
    ],
    cmd = """
    cp $(location //wasm) $(location web/app.wasm)
    cp $(location //static:icon) $(location web/icon.png)
    cp $(location //static:favicon) $(location web/favicon.ico)
    cp $(location //static:bootstrap_css) $(location web/bootstrap.min.css)
    """,
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "web/app.wasm",
        "web/icon.png",
        "web/favicon.ico",
        "web/bootstrap.min.css",
    ],
    importpath = "github.com/filmil/bazel-wasm-demo/server",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/api",
        "//ui",
        "@com_github_golang_glog//:glog",
        "@com_github_maxence_charriere_go_app_v10//pkg/app",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "server_layer",
    srcs = [":server"],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/usr/local/bin/server"],
    tars = [":server_layer"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "tarball",
    image = ":image",
    repo_tags = ["bazel-wasm-demo-server:latest"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "push",
    image = ":image",
    repository_file = ":registry",
    remote_tags = ["latest"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    data = [":server"],
    env = {
        "SERVER_BIN": "$(location :server)",
    },
    deps = ["@rules_go//go/tools/bazel"],
)
