filegroup(
    name = "icon",
    srcs = ["icon.png"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "favicon",
    srcs = ["favicon.ico"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bootstrap_css",
    srcs = ["bootstrap.min.css"],
    visibility = ["//visibility:public"],
)
