load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/bazel-wasm-demo/tools/protoc-gen-server",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_google_protobuf//compiler/protogen"],
)

go_binary(
    name = "protoc-gen-server",
    embed = [":protoc-gen-server_lib"],
    visibility = ["//visibility:public"],
)
